added data files and added Summary section

--- a/lstm_autoencoder_anomaly_detection (1).ipynb
+++ b/lstm_autoencoder_anomaly_detection (1).ipynb
@@ -6,7 +6,7 @@
     "id": "Abb4om7tned5"
    },
    "source": [
-    "## LSTM Autoencoder: Learning time-series to predict XYZ."
+    "## LSTM Autoencoder: Learning time-series to predict pathologic ECG activity"
    ]
   },
   {
@@ -582,222 +582,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 256
-    },
-    "id": "YUYz52feWqTG",
-    "outputId": "fa69b466-933b-4bee-844a-f793f6e2e2d4"
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>att1</th>\n",
-       "      <th>att2</th>\n",
-       "      <th>att3</th>\n",
-       "      <th>att4</th>\n",
-       "      <th>att5</th>\n",
-       "      <th>att6</th>\n",
-       "      <th>att7</th>\n",
-       "      <th>att8</th>\n",
-       "      <th>att9</th>\n",
-       "      <th>att10</th>\n",
-       "      <th>...</th>\n",
-       "      <th>att132</th>\n",
-       "      <th>att133</th>\n",
-       "      <th>att134</th>\n",
-       "      <th>att135</th>\n",
-       "      <th>att136</th>\n",
-       "      <th>att137</th>\n",
-       "      <th>att138</th>\n",
-       "      <th>att139</th>\n",
-       "      <th>att140</th>\n",
-       "      <th>target</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>3.690844</td>\n",
-       "      <td>0.711414</td>\n",
-       "      <td>-2.114091</td>\n",
-       "      <td>-4.141007</td>\n",
-       "      <td>-4.574472</td>\n",
-       "      <td>-3.431909</td>\n",
-       "      <td>-1.950791</td>\n",
-       "      <td>-1.107067</td>\n",
-       "      <td>-0.632322</td>\n",
-       "      <td>0.334577</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.022847</td>\n",
-       "      <td>0.188937</td>\n",
-       "      <td>0.480932</td>\n",
-       "      <td>0.629250</td>\n",
-       "      <td>0.577291</td>\n",
-       "      <td>0.665527</td>\n",
-       "      <td>1.035997</td>\n",
-       "      <td>1.492287</td>\n",
-       "      <td>-1.905073</td>\n",
-       "      <td>b'1'</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>-1.348132</td>\n",
-       "      <td>-3.996038</td>\n",
-       "      <td>-4.226750</td>\n",
-       "      <td>-4.251187</td>\n",
-       "      <td>-3.477953</td>\n",
-       "      <td>-2.228422</td>\n",
-       "      <td>-1.808488</td>\n",
-       "      <td>-1.534242</td>\n",
-       "      <td>-0.779861</td>\n",
-       "      <td>-0.397999</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.570938</td>\n",
-       "      <td>1.591394</td>\n",
-       "      <td>1.549193</td>\n",
-       "      <td>1.193077</td>\n",
-       "      <td>0.515134</td>\n",
-       "      <td>0.126274</td>\n",
-       "      <td>0.267532</td>\n",
-       "      <td>1.071148</td>\n",
-       "      <td>-1.164009</td>\n",
-       "      <td>b'1'</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1.024295</td>\n",
-       "      <td>-0.590314</td>\n",
-       "      <td>-1.916949</td>\n",
-       "      <td>-2.806989</td>\n",
-       "      <td>-3.527905</td>\n",
-       "      <td>-3.638675</td>\n",
-       "      <td>-2.779767</td>\n",
-       "      <td>-2.019031</td>\n",
-       "      <td>-1.980754</td>\n",
-       "      <td>-1.440680</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.443502</td>\n",
-       "      <td>0.827582</td>\n",
-       "      <td>1.237007</td>\n",
-       "      <td>1.235121</td>\n",
-       "      <td>1.738103</td>\n",
-       "      <td>1.800767</td>\n",
-       "      <td>1.816301</td>\n",
-       "      <td>1.473963</td>\n",
-       "      <td>1.389767</td>\n",
-       "      <td>b'1'</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0.545657</td>\n",
-       "      <td>-1.014383</td>\n",
-       "      <td>-2.316698</td>\n",
-       "      <td>-3.634040</td>\n",
-       "      <td>-4.196857</td>\n",
-       "      <td>-3.758093</td>\n",
-       "      <td>-3.194444</td>\n",
-       "      <td>-2.221764</td>\n",
-       "      <td>-1.588554</td>\n",
-       "      <td>-1.202146</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.777530</td>\n",
-       "      <td>1.119240</td>\n",
-       "      <td>0.902984</td>\n",
-       "      <td>0.554098</td>\n",
-       "      <td>0.497053</td>\n",
-       "      <td>0.418116</td>\n",
-       "      <td>0.703108</td>\n",
-       "      <td>1.064602</td>\n",
-       "      <td>-0.044853</td>\n",
-       "      <td>b'1'</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0.661133</td>\n",
-       "      <td>-1.552471</td>\n",
-       "      <td>-3.124641</td>\n",
-       "      <td>-4.313351</td>\n",
-       "      <td>-4.017042</td>\n",
-       "      <td>-3.005993</td>\n",
-       "      <td>-1.832411</td>\n",
-       "      <td>-1.503886</td>\n",
-       "      <td>-1.071705</td>\n",
-       "      <td>-0.521316</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.280823</td>\n",
-       "      <td>1.494315</td>\n",
-       "      <td>1.618764</td>\n",
-       "      <td>1.447449</td>\n",
-       "      <td>1.238577</td>\n",
-       "      <td>1.749692</td>\n",
-       "      <td>1.986803</td>\n",
-       "      <td>1.422756</td>\n",
-       "      <td>-0.357784</td>\n",
-       "      <td>b'1'</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 141 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       att1      att2      att3      att4      att5      att6      att7  \\\n",
-       "0  3.690844  0.711414 -2.114091 -4.141007 -4.574472 -3.431909 -1.950791   \n",
-       "1 -1.348132 -3.996038 -4.226750 -4.251187 -3.477953 -2.228422 -1.808488   \n",
-       "2  1.024295 -0.590314 -1.916949 -2.806989 -3.527905 -3.638675 -2.779767   \n",
-       "3  0.545657 -1.014383 -2.316698 -3.634040 -4.196857 -3.758093 -3.194444   \n",
-       "4  0.661133 -1.552471 -3.124641 -4.313351 -4.017042 -3.005993 -1.832411   \n",
-       "\n",
-       "       att8      att9     att10  ...    att132    att133    att134    att135  \\\n",
-       "0 -1.107067 -0.632322  0.334577  ...  0.022847  0.188937  0.480932  0.629250   \n",
-       "1 -1.534242 -0.779861 -0.397999  ...  1.570938  1.591394  1.549193  1.193077   \n",
-       "2 -2.019031 -1.980754 -1.440680  ...  0.443502  0.827582  1.237007  1.235121   \n",
-       "3 -2.221764 -1.588554 -1.202146  ...  0.777530  1.119240  0.902984  0.554098   \n",
-       "4 -1.503886 -1.071705 -0.521316  ...  1.280823  1.494315  1.618764  1.447449   \n",
-       "\n",
-       "     att136    att137    att138    att139    att140  target  \n",
-       "0  0.577291  0.665527  1.035997  1.492287 -1.905073    b'1'  \n",
-       "1  0.515134  0.126274  0.267532  1.071148 -1.164009    b'1'  \n",
-       "2  1.738103  1.800767  1.816301  1.473963  1.389767    b'1'  \n",
-       "3  0.497053  0.418116  0.703108  1.064602 -0.044853    b'1'  \n",
-       "4  1.238577  1.749692  1.986803  1.422756 -0.357784    b'1'  \n",
-       "\n",
-       "[5 rows x 141 columns]"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 16,
    "metadata": {
     "id": "xLgRFiZOTib4"
@@ -846,222 +630,6 @@
     "df.columns = new_columns\n",
     "df['target'] = df['target'].str.decode('utf-8').astype(int)\n",
     "df.target.value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 256
-    },
-    "id": "xJeXrSlRbA_0",
-    "outputId": "b2392eea-04f0-481b-faea-92b9d3c6fdcc"
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>att1</th>\n",
-       "      <th>att2</th>\n",
-       "      <th>att3</th>\n",
-       "      <th>att4</th>\n",
-       "      <th>att5</th>\n",
-       "      <th>att6</th>\n",
-       "      <th>att7</th>\n",
-       "      <th>att8</th>\n",
-       "      <th>att9</th>\n",
-       "      <th>att10</th>\n",
-       "      <th>...</th>\n",
-       "      <th>att132</th>\n",
-       "      <th>att133</th>\n",
-       "      <th>att134</th>\n",
-       "      <th>att135</th>\n",
-       "      <th>att136</th>\n",
-       "      <th>att137</th>\n",
-       "      <th>att138</th>\n",
-       "      <th>att139</th>\n",
-       "      <th>att140</th>\n",
-       "      <th>target</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1441</th>\n",
-       "      <td>-1.425496</td>\n",
-       "      <td>-2.952368</td>\n",
-       "      <td>-3.756323</td>\n",
-       "      <td>-3.792428</td>\n",
-       "      <td>-3.757912</td>\n",
-       "      <td>-3.579295</td>\n",
-       "      <td>-3.008802</td>\n",
-       "      <td>-2.137726</td>\n",
-       "      <td>-1.734878</td>\n",
-       "      <td>-1.297530</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.464078</td>\n",
-       "      <td>1.166172</td>\n",
-       "      <td>0.568914</td>\n",
-       "      <td>-0.159866</td>\n",
-       "      <td>-0.627483</td>\n",
-       "      <td>-0.568104</td>\n",
-       "      <td>-0.190375</td>\n",
-       "      <td>0.299694</td>\n",
-       "      <td>-0.467373</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3588</th>\n",
-       "      <td>-0.664394</td>\n",
-       "      <td>-1.878582</td>\n",
-       "      <td>-2.490230</td>\n",
-       "      <td>-3.427554</td>\n",
-       "      <td>-3.417860</td>\n",
-       "      <td>-3.262233</td>\n",
-       "      <td>-2.942059</td>\n",
-       "      <td>-2.360777</td>\n",
-       "      <td>-1.939241</td>\n",
-       "      <td>-1.382762</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-0.705924</td>\n",
-       "      <td>-1.318398</td>\n",
-       "      <td>-1.706091</td>\n",
-       "      <td>-2.264468</td>\n",
-       "      <td>-2.876886</td>\n",
-       "      <td>-3.319439</td>\n",
-       "      <td>-2.714195</td>\n",
-       "      <td>-2.319736</td>\n",
-       "      <td>-0.593385</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4064</th>\n",
-       "      <td>0.723079</td>\n",
-       "      <td>1.097061</td>\n",
-       "      <td>0.797678</td>\n",
-       "      <td>0.027186</td>\n",
-       "      <td>-0.493537</td>\n",
-       "      <td>-0.983364</td>\n",
-       "      <td>-1.135799</td>\n",
-       "      <td>-1.465710</td>\n",
-       "      <td>-1.720536</td>\n",
-       "      <td>-1.774263</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-1.429755</td>\n",
-       "      <td>-1.757924</td>\n",
-       "      <td>-2.156745</td>\n",
-       "      <td>-2.844409</td>\n",
-       "      <td>-3.094037</td>\n",
-       "      <td>-3.920735</td>\n",
-       "      <td>-4.130177</td>\n",
-       "      <td>-4.860701</td>\n",
-       "      <td>-3.556788</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1575</th>\n",
-       "      <td>-0.833736</td>\n",
-       "      <td>-2.093099</td>\n",
-       "      <td>-2.957494</td>\n",
-       "      <td>-3.689676</td>\n",
-       "      <td>-4.053112</td>\n",
-       "      <td>-3.838604</td>\n",
-       "      <td>-3.126495</td>\n",
-       "      <td>-2.128082</td>\n",
-       "      <td>-1.634552</td>\n",
-       "      <td>-1.515671</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.155246</td>\n",
-       "      <td>0.815880</td>\n",
-       "      <td>0.175531</td>\n",
-       "      <td>-0.342710</td>\n",
-       "      <td>-0.459910</td>\n",
-       "      <td>-0.356954</td>\n",
-       "      <td>-0.034112</td>\n",
-       "      <td>0.587098</td>\n",
-       "      <td>0.044379</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0.490473</td>\n",
-       "      <td>-1.914407</td>\n",
-       "      <td>-3.616364</td>\n",
-       "      <td>-4.318823</td>\n",
-       "      <td>-4.268016</td>\n",
-       "      <td>-3.881110</td>\n",
-       "      <td>-2.993280</td>\n",
-       "      <td>-1.671131</td>\n",
-       "      <td>-1.333884</td>\n",
-       "      <td>-0.965629</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.350816</td>\n",
-       "      <td>0.499111</td>\n",
-       "      <td>0.600345</td>\n",
-       "      <td>0.842069</td>\n",
-       "      <td>0.952074</td>\n",
-       "      <td>0.990133</td>\n",
-       "      <td>1.086798</td>\n",
-       "      <td>1.403011</td>\n",
-       "      <td>-0.383564</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 141 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "          att1      att2      att3      att4      att5      att6      att7  \\\n",
-       "1441 -1.425496 -2.952368 -3.756323 -3.792428 -3.757912 -3.579295 -3.008802   \n",
-       "3588 -0.664394 -1.878582 -2.490230 -3.427554 -3.417860 -3.262233 -2.942059   \n",
-       "4064  0.723079  1.097061  0.797678  0.027186 -0.493537 -0.983364 -1.135799   \n",
-       "1575 -0.833736 -2.093099 -2.957494 -3.689676 -4.053112 -3.838604 -3.126495   \n",
-       "3     0.490473 -1.914407 -3.616364 -4.318823 -4.268016 -3.881110 -2.993280   \n",
-       "\n",
-       "          att8      att9     att10  ...    att132    att133    att134  \\\n",
-       "1441 -2.137726 -1.734878 -1.297530  ...  1.464078  1.166172  0.568914   \n",
-       "3588 -2.360777 -1.939241 -1.382762  ... -0.705924 -1.318398 -1.706091   \n",
-       "4064 -1.465710 -1.720536 -1.774263  ... -1.429755 -1.757924 -2.156745   \n",
-       "1575 -2.128082 -1.634552 -1.515671  ...  1.155246  0.815880  0.175531   \n",
-       "3    -1.671131 -1.333884 -0.965629  ...  0.350816  0.499111  0.600345   \n",
-       "\n",
-       "        att135    att136    att137    att138    att139    att140  target  \n",
-       "1441 -0.159866 -0.627483 -0.568104 -0.190375  0.299694 -0.467373       1  \n",
-       "3588 -2.264468 -2.876886 -3.319439 -2.714195 -2.319736 -0.593385       2  \n",
-       "4064 -2.844409 -3.094037 -3.920735 -4.130177 -4.860701 -3.556788       2  \n",
-       "1575 -0.342710 -0.459910 -0.356954 -0.034112  0.587098  0.044379       1  \n",
-       "3     0.842069  0.952074  0.990133  1.086798  1.403011 -0.383564       1  \n",
-       "\n",
-       "[5 rows x 141 columns]"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.head()"
    ]
   },
   {
@@ -1191,18 +759,6 @@
    },
    "source": [
     "Cross-validation approach was adapted from: https://scikit-learn.org/stable/auto_examples/model_selection/plot_roc.html"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {
-    "id": "Kocin_XJned9"
-   },
-   "outputs": [],
-   "source": [
-    "# model = LSTM_AE(seq_len, n_features, embedding_dim=64)\n",
-    "# model = model.to(device)"
    ]
   },
   {
@@ -1493,10 +1049,6 @@
     "f1s = []\n",
     "accs = []\n",
     "mean_fpr = np.linspace(0, 1, 100)\n",
-    "\n",
-    "RANDOM_SEED = 24\n",
-    "normal_df = df[df['target'] == CLASS_NORMAL].drop(labels='target', axis=1)\n",
-    "anomaly_df = df[df['target'] != CLASS_NORMAL].drop(labels='target', axis=1)\n",
     "\n",
     "# set parameters for 10-fold Cross Validation\n",
     "fold = 0\n",
